fix: ajustes menores
